# serverstatus-a

./: .gitignore  Cargo.toml
src/: main.rs
src/channel/: broadcast_channel.rs  mod.rs
src/entity/: mod.rs  server_config.rs  update_status.rs
src/router/: mod.rs  serverstatus.rs  static.rs
static/: page.html
