[package]
name = "serverstatus-a"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.1",features = ["headers"]  }
tokio = { version = "1.23.0", features = ["full"] }
tower = { version = "0.4.13", features = ["timeout"] }
serde = {version= "1.0.181", features=["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
headers = "0.3"
tokio-stream = {version =  "0.1", features = ["sync"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
once_cell = "1.18.0"
bytes = "1.4.0"
async-stream = "0.3.5"
syn = "2.0.28"